[tool.poetry]
name = "hammurabi"
version = "0.11.1"
license = "Apache-2.0"
description = "Hammurabi is an extensible CLI tool responsible for enforcing user-defined rules on a git repository."
documentation = "https://readthedocs.org/projects/hammurabi/badge/"
repository = "https://github.com/gabor-boros/hammurabi/"
readme = "README.rst"
keywords = ["automation", "project", "manipulate", "rules", "config", "codemod"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",

]
authors = [
    "Gábor Boros <gabor.brs@gmail.com>"
]
maintainers = [
    "Gábor Boros <gabor.brs@gmail.com>",
    "László Üveges",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/gabor-boros/hammurabi/issues/"

[tool.poetry.scripts]
hammurabi = 'hammurabi.main:app'

[tool.poetry.dependencies]
"github3.py" = "^1.3.0"
"ruamel.yaml" = { version = "^0.16.5", optional = true }
# pyhocon = { version = "^0.3.54", optional = true }
configupdater = { version = "^1.0.1", optional = true }
gitpython = "^3.0.5"
jinja2 = { version = "^2.11.1", optional = true }
pydantic = "^1.4"
python = "^3.7"
slack-webhook = { version = "^1.0.3", optional = true }
toml = "^0.10.1"
typer = "^0.3.1"
ujson = { version = ">=1.35,<5.0", optional = true }

[tool.poetry.dev-dependencies]
bandit = "^1.6"
black = { version = "^20.8b1", allow-prereleases = true }
coverage = "^5.3"
flake8 = "^3.8"
hypothesis = "^5.37.3"
mypy = "^0.790"
pygments = "^2.7"
pylint = "^2.6"
pytest = "^6.1.1"
sphinx_rtd_theme = "^0.5.0"

[tool.poetry.extras]
all = [
    "configupdater",
    "pyhocon",
    "ujson",
    "ruamel.yaml",
    "jinja2",
    "slack-webhook",
]

ini = ["configupdater"]
# hocon = ["pyhocon"]
ujson = ["ujson"]
yaml = ["ruamel.yaml"]
templating = ["jinja2"]
slack-notifications = ["slack-webhook"]

[tool.black]
target-version = ['py37']

[tool.isort]
atomic = true
case_sensitive = true
combine_star = true
force_sort_within_sections = true
include_trailing_comma = true
order_by_type = true
jobs = 4
line_length = 88  # Same as Black's line length
multi_line_output = 3

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
